[project]
name = "data-agent-toolkit"
version = "0.1.0"
description = "Enterprise AI Agent Toolkit for Data Engineering teams — LangGraph agents on Databricks with MLflow 3 observability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "sikhakolliai-ship-it" },
]
keywords = [
    "langgraph",
    "databricks",
    "agents",
    "mlflow",
    "data-engineering",
    "genai",
    "unity-catalog",
    "delta-lake",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=1.0.10",
    "langchain-core>=0.3.0",
    "langchain>=1.0.0",
    "databricks-langchain>=0.5.0",
    "mlflow[genai]>=3.7.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "databricks-sdk>=0.40.0",
    "delta-spark>=3.2",
    "pyspark>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "pre-commit>=4.0",
]
eval = [
    "langsmith>=0.3.0",
]
guardrails = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.urls]
Homepage = "https://github.com/sikhakolliai-ship-it/data-agent-toolkit"
Repository = "https://github.com/sikhakolliai-ship-it/data-agent-toolkit"
Documentation = "https://github.com/sikhakolliai-ship-it/data-agent-toolkit/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_agent_toolkit"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["data_agent_toolkit"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Databricks cluster connection",
    "evaluation: LLM-as-judge quality tests (slow, costs tokens)",
]
addopts = "-m 'not integration and not evaluation' --tb=short"
